# molweaver

./: .env.example  .gitignore  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  alignment_job.py  alignment_tools.py  analysis_job.py  app.py  artifact_export.py  backend_discovery.py  environment.yml  install.ps1  install.sh  mcp_server.py  pymol_renderer.py  pyproject.toml  render_job.py  requirements.txt  scene_operations.py  schemas.py  setup_pymol_env.ps1  source_resolver.py  start_server.ps1  start_server.sh  structure_analyzer.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  mcp.yml  pymol-smoke.yml
docs/: agent-prompt-recipes.md  agent-usage.md  api-reference.md  architecture.md  github-topics.md  installation-linux.md  installation-unix.md  installation-windows.md  known-issues.md  mcp.md  presets.md  quickstart.md  rename.md  roadmap.md  scene-operations.md  security-model.md  security.md  zenodo.md
examples/: agent_prompt_examples.md  agent_prompt_recipes.md  align_1gyc_1kya.json  analyze_copper_site_1gyc.json  custom_scene_1gyc.json  inspect_1gyc.json  ligand_pocket_1kya.json  mcp_config_example.json  measure_copper_distance_1gyc.json  render_1gyc_copper_sites.json  render_pdb_basic.json
tests/: test_analysis_endpoints.py  test_analysis_schemas.py  test_artifact_exports.py  test_cross_platform_support.py  test_health.py  test_mcp_server.py  test_render_schema.py
